Create BulletStream project structure with all modules
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>